[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://assets/empty-classroom-scene-with-interior-decoration-and-objects-free-vector.jpg" type="Texture" id=2]
[ext_resource path="res://assets/tamro.jpg" type="Texture" id=3]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Empty-classroom-scene-with-interior-decoration-and-objects-free-vector" type="Sprite" parent="."]
position = Vector2( 769, 409 )
scale = Vector2( 0.800586, 0.759225 )
texture = ExtResource( 2 )

[node name="Tamro" type="Sprite" parent="."]
position = Vector2( 783, 352 )
scale = Vector2( 0.298548, 0.400884 )
texture = ExtResource( 3 )

[node name="numofmhmm" type="RichTextLabel" parent="."]
modulate = Color( 0.403922, 0.403922, 0.403922, 1 )
margin_left = 199.0
margin_top = 7.0
margin_right = 309.0
margin_bottom = 27.0
text = "num of mhmm's"

[node name="main Button" type="Button" parent="."]
margin_left = 143.0
margin_top = 129.0
margin_right = 396.0
margin_bottom = 331.0
text = "press for mhmmmm"

[node name="Boosters" type="Node" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="Boosters"]
modulate = Color( 0.466667, 0.466667, 0.466667, 1 )
margin_left = 451.0
margin_top = 9.0
margin_right = 595.0
margin_bottom = 58.0
text = "more mhmm' per click"

[node name="boost1" type="Button" parent="Boosters"]
margin_left = 453.0
margin_top = 69.0
margin_right = 594.0
margin_bottom = 109.0
text = "5 mhmm's"

[node name="RichTextLabel" type="RichTextLabel" parent="Boosters/boost1"]
margin_left = -1.0
margin_top = 44.0
margin_right = 140.0
margin_bottom = 84.0
text = "          cost 100"

[node name="boost2" type="Button" parent="Boosters"]
margin_left = 452.0
margin_top = 141.0
margin_right = 593.0
margin_bottom = 179.0
text = "10 mhmm's"

[node name="RichTextLabel2" type="RichTextLabel" parent="Boosters/boost2"]
margin_left = 1.0
margin_top = 42.0
margin_right = 144.0
margin_bottom = 57.0
text = "         cost 1000"

[node name="boost3" type="Button" parent="Boosters"]
margin_left = 451.0
margin_top = 209.0
margin_right = 594.0
margin_bottom = 247.0
text = "100 mhmm's"

[node name="RichTextLabel" type="RichTextLabel" parent="Boosters/boost3"]
margin_left = 36.0
margin_top = 39.0
margin_right = 122.0
margin_bottom = 61.0
text = "cost 10,000"

[node name="texts" type="Node" parent="."]

[connection signal="pressed" from="main Button" to="." method="_on_main_Button_pressed"]
[connection signal="pressed" from="Boosters/boost1" to="." method="_on_boost1_pressed"]
[connection signal="pressed" from="Boosters/boost2" to="." method="_on_boost2_pressed"]
[connection signal="pressed" from="Boosters/boost3" to="." method="_on_boost3_pressed"]
